compiler/tests/fa/errors/noret_rettype.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
بی‌بازگشت تابع بد() : صحیح:
    تاوقتی درست:
    پایان
پایان

تابع اصلی:
    بد()
پایان
